--- a/season_one.html
+++ b/season_one.html
@@ -1,10 +1,74 @@
 <!doctype html>
 <html>
     <head>
-
+      <header>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="characters.html">Characters</a>
+          <a href="season_one.html">Season One</a>
+        </nav>
+        <section>
+          <h1>Star vs. the Forces of Evil</h1>
+          <img src="https://media.giphy.com/media/EqaHCIczZPYKk/giphy.gif?response_id=591e3f75a755c13b580552ba" alt="Pic">
+        </section>
+      </header>
     </head>
+    <hr>
     <body>
-
-        
+      <section>
+        <h4>Season One</h4>
+      </section>
+      <section>
+        <table>
+          <tr>
+            <td>Episode Number</td>
+            <td>Title</td>
+            <td>Aire Date</td>
+          </tr>
+          <tr>
+            <td>01</td>
+            <td>"Star Comes to Earth"</td>
+            <td>March 30, 2015</td>
+          </tr>
+          <tr>
+            <td>02</td>
+            <td>"Party With a Pony"</td>
+            <td>March 30, 2015</td>
+          </tr>
+          <tr>
+            <td>03</td>
+            <td>"Match Maker"</td>
+            <td>March 30, 2015 /td>
+          </tr>
+          <tr>
+            <td>04</td>
+            <td>"School Spirit"</td>
+            <td>March 30, 2015</td>
+          </tr>
+          <tr>
+            <td>05</td>
+            <td>"Monster Arm"</td>
+            <td>April 6, 2015</td>
+          </tr>
+          <tr>
+            <td>06</td>
+            <td>"The Other Exchange Student"</td>
+            <td>April 6, 2015</td>
+          </tr>
+          <tr>
+            <td>07</td>
+            <td>"Cheer up, Star"</td>
+            <td>April 13, 2015</td>
+          </tr>
+        </table>
+      </section>
     </body>
+    <hr>
+    <footer>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="characters.html">Characters</a>
+        <a href="season_one.html">Season One</a>
+      </nav>
+    </footer>
 </html>
